# CGD-CTD

./: .clang-tidy  .gitignore  123.txt  CMakeLists.txt  CMakePresets.json  README.md  condensedlog.txt  oingo.py  oingo.sh  oingoboingo.txt  output_data_20230806204332.json  output_data_20230806220641.json  output_data_20230806220755.json  output_data_20230806221632.json  output_data_20230806222035.json  output_data_20230806222453.json  output_data_20230806222549.json  output_data_20230806223903.json  output_data_20230806224929.json  output_data_20230806225930.json  output_data_20230806230602.json  output_data_20230806231755.json  output_data_20230807142758.json  output_data_20230822142342.json  output_data_20230823042906.json  output_data_20230823180538.json  output_data_20230824201235.json  overnight.txt  pil.py  test.py
.devcontainer/: Dockerfile  devcontainer.json
apps/: CMakeLists.txt  CTRT.cpp  OPTM.cpp  main.cpp
oidn/: CMakeLists.txt
oidn/api/: CMakeLists.txt  api.cpp
oidn/apps/: CMakeLists.txt  oidnBenchmark.cpp  oidnDenoise.cpp  oidnTest.cpp
oidn/apps/utils/: CMakeLists.txt  arg_parser.cpp  arg_parser.h  device_info.h  dummy.c  image_buffer.cpp  image_buffer.h  image_io.cpp  image_io.h  random.h
oidn/cmake/: FindLevelZero.cmake  FindOpenImageIO.cmake  FindTBB.cmake  oidn_bnns.cmake  oidn_common.cmake  oidn_common_external.cmake  oidn_dnnl.cmake  oidn_ispc.cmake  oidn_macros.cmake  oidn_package.cmake  oidn_platform.cmake  oidn_version.cmake
oidn/common/: CMakeLists.txt  common.cpp  common.h  export.linux.map  export.linux.map.in  export.macos.map  export.macos.map.in  half.cpp  half.h  oidn.rc  oidn_utils.cpp  oidn_utils.h  platform.cpp  platform.h
oidn/core/: CMakeLists.txt  autoexposure.h  buffer.cpp  buffer.h  color.cpp  color.h  concat_conv.cpp  concat_conv.h  concat_conv_chw.cpp  concat_conv_chw.h  concat_conv_hwc.cpp  concat_conv_hwc.h  context.cpp  context.h  conv.cpp  conv.h  data.h  device.cpp  device.h  device_factory.h  engine.cpp  engine.h  exception.cpp  exception.h  filter.cpp  filter.h  generic_graph.cpp  generic_graph.h  graph.h  image.cpp  image.h  image_accessor.h  image_copy.h  input_process.cpp  input_process.h  kernel.h  math.h  module.cpp  module.h  op.h  (+30 more)
oidn/devices/: CMakeLists.txt
oidn/devices/cpu/: CMakeLists.txt  color.ispc  color.isph  cpu_autoexposure.cpp  cpu_autoexposure.h  cpu_autoexposure.ispc  cpu_common.cpp  cpu_common.h  cpu_device.cpp  cpu_device.h  cpu_engine.cpp  cpu_engine.h  cpu_image_copy.cpp  cpu_image_copy.h  cpu_image_copy.ispc  cpu_input_process.cpp  cpu_input_process.h  cpu_input_process.ispc  cpu_module.cpp  cpu_output_process.cpp  cpu_output_process.h  cpu_output_process.ispc  cpu_pool.cpp  cpu_pool.h  cpu_pool.ispc  cpu_upsample.cpp  cpu_upsample.h  cpu_upsample.ispc  image_accessor.isph  math.isph  tasking.cpp  tasking.h  tensor_accessor.isph  tile.isph  vec.isph
oidn/devices/cuda/: CMakeLists.txt  cuda_conv.cu  cuda_conv.h  cuda_device.cpp  cuda_device.h  cuda_engine.cu  cuda_engine.h  cuda_external_buffer.cpp  cuda_external_buffer.h  cuda_module.cpp  cutlass_conv.h  cutlass_conv_sm70.cu  cutlass_conv_sm75.cu  cutlass_conv_sm80.cu
oidn/devices/gpu/: gpu_autoexposure.h  gpu_image_copy.h  gpu_input_process.h  gpu_output_process.h  gpu_pool.h  gpu_upsample.h
oidn/devices/hip/: CMakeLists.txt  ck_conv.h  (+10 more)
oidn/doc/: .gitignore  Makefile  api.md  compilation.md  documentation.md  downloads.md  examples.md  filter-latex.py  filter-sectionnumbers.py  gallery.md  images.md  legal.md  links.md  overview.md  preamble.tex  readme.tex  readme_head.md  related_projects.md  stylesheet.css  teaser.html  training.md  webtemplate.html
oidn/scripts/: blob_to_cpp.py  build.py  build_src.py  build_weights.py  common.py  kw-build.sh  kw-check-issues.sh  kw-gen-report.sh  protex_scan.sh  store-files.sh  test.py
oidn/training/: .gitignore  color.py  compare_image.py  config.py  convert_image.py  dataset.py  export.py  find_lr.py  image.py  infer.py  loss.py  model.py  preprocess.py  result.py  split_exr.py  ssim.py  train.py  tza.py  util.py  visualize.py
oidn/weights/: README.md
output/: output.exr
research/: barycentreic coordinates.txt  gram-schmidt orthogonalisation.txt  shading frames.txt
src/: CMakeLists.txt  common.hpp  helper_functions.cpp  helper_functions.h  ppm.cpp  ppm.hpp
src/bvh/: CMakeLists.txt  bvh.cpp  bvh.hpp
src/camera/: CMakeLists.txt  camera.cpp  camera.hpp  canvas.cpp  canvas.hpp  film.cpp  film.hpp  rect.hpp
src/cameras/: CMakeLists.txt
src/config/: CMakeLists.txt  options.cpp  options.hpp
src/embree/: CMakeLists.txt  embreedevice.cpp  embreedevice.hpp  embreesingleton.cpp  embreesingleton.hpp
src/image/: CMakeLists.txt
src/interaction/: CMakeLists.txt  interaction.hpp
src/lights/: CMakeLists.txt  light.cpp  light.hpp  pdf.cpp  pdf.hpp  pointlight.cpp  pointlight.hpp
src/loaders/: CMakeLists.txt  object.cpp  object.hpp  objloader.cpp  objloader.hpp  prims.hpp  scene.cpp  scene.hpp  textureloader.cpp  transform.cpp  transform.hpp
src/materials/: CMakeLists.txt  brdfdata.hpp  mat.cpp  mat.hpp  material.cpp  material.hpp  materials.hpp  phong.hpp  phongmat.cpp  phongmat.hpp
src/math/: CMakeLists.txt  tensor.hpp
src/object/: CMakeLists.txt  object.cpp  object.hpp  oingoscene.cpp  oingoscene.hpp
src/renderers/: CMakeLists.txt  renderer.hpp  testrenderer.cpp  testrenderer.hpp  threadpool.hpp
src/scene/: CMakeLists.txt  object.hpp  scene.hpp
src/shapes/: CMakeLists.txt  cylinder.cpp  cylinder.hpp  disk.cpp  disk.hpp  parallelepiped.cpp  parallelepiped.hpp  parallelogram.cpp  parallelogram.hpp  polygon.cpp  polygon.hpp  sphere.hpp  triangle.cpp  triangle.hpp  tube.cpp  tube.hpp
src/textures/: CMakeLists.txt  texture.cpp  texture.hpp
src/utils/: CMakeLists.txt  depthcounter.cpp  depthcounter.hpp  exr.cpp  exr.hpp  ppm.cpp  ppm.hpp  rgb.cpp  rgb.hpp  timer.cpp  timer.hpp  utils.cpp  utils.hpp
testdata/: cornell_20230822220351.json  split_20230823134721.json  split_left_20230825041300.json  triple_al_20230823203308.json
tests/: CMakeLists.txt  testtextureload.cpp
(+35 files in other folders)
