add_test(NAME cow              COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-cow-output.exr              -r 1920x1080 -i ${CMAKE_SOURCE_DIR}/obj/cow.obj)
add_test(NAME igea             COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-head-output.exr             -r 1920x1080 -i ${CMAKE_SOURCE_DIR}/obj/igea.obj)
add_test(NAME homer            COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-homer-output.exr            -r 1920x1080 -i ${CMAKE_SOURCE_DIR}/obj/homer.obj)
add_test(NAME lucy             COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-lucy-output.exr             -r 1920x1080 -i ${CMAKE_SOURCE_DIR}/obj/lucy.obj)
add_test(NAME max-planck       COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-max-planck-output.exr       -r 1920x1080 -i ${CMAKE_SOURCE_DIR}/obj/max-planck.obj)
add_test(NAME nefertiti        COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-nefertiti-output.exr        -r 1920x1080 -i ${CMAKE_SOURCE_DIR}/obj/nefertiti.obj)
add_test(NAME ogre             COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-ogre-output.exr             -r 1920x1080 -i ${CMAKE_SOURCE_DIR}/obj/ogre.obj)
add_test(NAME spot             COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-spot-output.exr             -r 1920x1080 -i ${CMAKE_SOURCE_DIR}/obj/spot.obj)
add_test(NAME stanford-bunny   COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-stanford-bunny-output.exr   -r 1920x1080 -i ${CMAKE_SOURCE_DIR}/obj/stanford-bunny.obj)
add_test(NAME suzanne          COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-suzanne-output.exr          -r 1920x1080 -i ${CMAKE_SOURCE_DIR}/obj/suzanne.obj)
add_test(NAME teapot           COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-teapot-output.exr           -r 1920x1080 -i ${CMAKE_SOURCE_DIR}/obj/teapot.obj)
add_test(NAME xyzrgb_dragon    COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-xyzrgb_dragon-output.exr    -r 1920x1080 -i ${CMAKE_SOURCE_DIR}/obj/xyzrgb_dragon.obj)
 
add_test(NAME cow4k            COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-4kcow-output.exr            -r 3840x2160 -i ${CMAKE_SOURCE_DIR}/obj/cow.obj)
add_test(NAME homer4k          COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-4khomer-output.exr          -r 3840x2160 -i ${CMAKE_SOURCE_DIR}/obj/homer.obj)
add_test(NAME igea4k           COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-4khead-output.exr           -r 3840x2160 -i ${CMAKE_SOURCE_DIR}/obj/igea.obj)
add_test(NAME lucy4k           COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-4klucy-output.exr           -r 3840x2160 -i ${CMAKE_SOURCE_DIR}/obj/lucy.obj)
add_test(NAME max-planck4k     COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-4kmax-planck-output.exr     -r 3840x2160 -i ${CMAKE_SOURCE_DIR}/obj/max-planck.obj)
add_test(NAME nefertiti4k      COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-4knefertiti-output.exr      -r 3840x2160 -i ${CMAKE_SOURCE_DIR}/obj/nefertiti.obj)
add_test(NAME ogre4k           COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-4kogre-output.exr           -r 3840x2160 -i ${CMAKE_SOURCE_DIR}/obj/ogre.obj)
add_test(NAME spot4k           COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-4kspot-output.exr           -r 3840x2160 -i ${CMAKE_SOURCE_DIR}/obj/spot.obj)
add_test(NAME stanford-bunny4k COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-4kstanford-bunny-output.exr -r 3840x2160 -i ${CMAKE_SOURCE_DIR}/obj/stanford-bunny.obj)
add_test(NAME suzanne4k        COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-4ksuzanne-output.exr        -r 3840x2160 -i ${CMAKE_SOURCE_DIR}/obj/suzanne.obj)
add_test(NAME teapot4k         COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-4kteapot-output.exr         -r 3840x2160 -i ${CMAKE_SOURCE_DIR}/obj/teapot.obj)
add_test(NAME xyzrgb_dragon4k  COMMAND ray-tracer -o ${CMAKE_SOURCE_DIR}/output/test-4kxyzrgb_dragon-output.exr  -r 3840x2160 -i ${CMAKE_SOURCE_DIR}/obj/xyzrgb_dragon.obj)


add_executable(ct-test-textureloader testtextureload.cpp)
target_link_libraries(ct-test-textureloader PRIVATE freeimage ct-embree)

#add_executable(ct-test-boingo boingo.cpp)